--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   
-  <title>Bogdan R&#259dulescu - Curriculum Vitae - R&eacute;sum&eacute;</title>
+  <title>Resume - Swarnava Sengupta</title>
   
-  <meta name="description" content="Semantic, Responsive, HTML and CSS Curriculum Vitae / Résumé of Linux Consultant, Bogdan R&#259dulescu">
-  <meta name="author" content="Bogdan R&#259dulescu - nimblex.net">
+  <meta name="description" content="Semantic, Responsive, HTML and CSS Curriculum Vitae / Resume of Swarnava Sengupta">
+  <meta name="author" content="Swarnava Sengupta">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" media="screen" href="styles.css">
 
-  <link rel="icon" type="image/png" href="./favicon.png" />
+   <link rel="icon" type="image/png" href="data:image/png;base64,
+iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAGXRFWHRTb2Z0d2Fy
+ZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAdZJREFUeNrElr1KxEAQx7PnxdNEOFBS
+WNhooaUgYqvNYWHjC6QzYqmtoAfa+wJWeQQ7G/EBfAALUUEi2FxxoBiPvXUGJhLi
+5WMne9zAj4Swm/nvfOyuUEpZicVx7Pi+/xhF0ZJt25YBuwJO8EVKabmua4VhaHme
+9zegWTD5GxgyHTeAGeAY6AGXeQObOd/Q8TbwXkPAKXAAXNA/u1UFoGFeXoGPGuEP
+6Ikizum9W1UA2rSBGghoMQGJUJQOWUVAnrWBqYpj0dFRSswZcA1EXAHo+BZY1RCw
+CRwC+8B8VjwnAk2NeYIc4nOQqi+2AFzRjua8PrWk0OmC9Ara1FaJDVKrKTNFooXO
+PpB25AAPwAKzC3AT2gA+OQI4Odf+f9EAPAy+gPWiEJbYkGpglqsQc/iTqQFdE9wI
+JAfRnUbfj+qaLdrWJ1IDglAcAUnYOzROMZwr6oRWnQj0DBxKomyVEzNObhuMVjQm
+AJ3fAMsazveAN1MCMJdrwIrGnBa3C/L6ulNU1SPspW4XZHP+zKgbp85OqJPzsdSA
+bs6N1UAS+l260SimgNo18GRgv3E4m4o0uOFJTgTmipQzIlD5UirpKn1vMAro3KPL
+TamApNgWx3D2/CvkXwEGAOO9XQYhxDFzAAAAAElFTkSuQmCC" />
   <!-- Modernizr on top to enable old browsers to render HTML5 markup -->
   <script src="modernizr.custom.94828.js"></script>
 
@@ -23,14 +35,14 @@
 <body>
 
     <header class="vcard">
-    	<h1 class="fn">Bogdan Radulescu</h1>
-        <h2 class="role">Linux Professional</h2>
+    	<h1 class="fn">Swarnava Sengupta</h1>
+        <h2 class="role">A Pseudo-Geek</h2>
     	<ul class="contact">
-		<li><i class="fa fa-envelope-o"></i> bogdan@nimblex.net</li>
-		<li><i class="fa fa-phone"></i> +40723372866</li>
-		<li><i class="fa fa-skype"></i> <a href="skype:bogdan_radulescu99?chat&topic=Contacted%20from%20CV">bogdan_radulescu99</a></li>
-		<li><i class="fa fa-link"></i> <a href="http://www.nimblex.net" title="Bogdan Radulescu Hoby Site" target="_blank">www.nimblex.net</a></li>
-		<li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Bucharest, Romania<span><img src="http://maps.googleapis.com/maps/api/staticmap?center=Drumul+Valea+Danului,Bucharest,Romania&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
+		<li><i class="fa fa-envelope-o"></i> swarnavasengupta@gmail.com</li>
+		<li><i class="fa fa-phone"></i> +919681004074</li>
+		<li><i class="fa fa-skype"></i> <a href="skype:swarnavasengupta1?chat&topic=Contacted%20from%20CV">swarnavasengupta1</a></li>
+		<li><i class="fa fa-link"></i> <a href="http://www.swarnava.in" title="Swarnava Sengupta's Personal Site" target="_blank">www.swarnava.in</a></li>
+		<li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Kolkata, India<span><img src="http://maps.googleapis.com/maps/api/staticmap?center=Baghajatin,Kolkata,India&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
 		<li><i class="fa fa-linkedin"></i> <a href="http://ro.linkedin.com/in/bogdanr" title="LinkedIn Profile" target="_blank">bogdanr</a></li>
 	</ul>
     </header>
