--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@ TamApNgWx3D2/CvkXwEGAOO9XQYhxDFzAAAAAElFTkSuQmCC" />
     <section id="skills">
   <h1>Skills</h1>
   <dl>
-  <dt>Gear</dt>
             <dd title="">Open Source</dd>
             <dd title="">Community Building</dd>
             <dd title="">HTML</dd>
@@ -71,6 +70,7 @@ TamApNgWx3D2/CvkXwEGAOO9XQYhxDFzAAAAAElFTkSuQmCC" />
             <dd title="">Mercurial</dd>
             <dd title="">Social Media</dd>
             <dd title="">Bugzilla</dd>
+            <dd title="">Wiki</dd>
 
     </section>
     
