added chrome colour

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Semantic, Responsive, HTML and CSS Curriculum Vitae / Resume of Swarnava Sengupta">
   <meta name="author" content="Swarnava Sengupta">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#333333">
   
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
