--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@ TamApNgWx3D2/CvkXwEGAOO9XQYhxDFzAAAAAElFTkSuQmCC" />
       <h1 class="fn">Swarnava Sengupta</h1>
         <h2 class="role">A Pseudo-Geek</h2>
       <ul class="contact">
-    <li><i class="fa fa-envelope-o"></i> mail@swarnava.in</li>
+    <li><i class="fa fa-envelope-o"></i> hello@swarnava.in</li>
     <li><i class="fa fa-phone"></i> +919681004074</li>
     <li><i class="fa fa-skype"></i> <a href="skype:swarnavasengupta1?chat&topic=Contacted%20from%20CV">swarnavasengupta1</a></li>
     <li><i class="fa fa-github"></i> <a href="http://www.github.com/swarnava" title="Github Profile" target="_blank">swarnava</a></li>
-    <li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Kolkata, India<span><img src="http://maps.googleapis.com/maps/api/staticmap?center=Baghajatin,Kolkata,India&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
+    <li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Gurgaon, India<span><img src="http://maps.googleapis.com/maps/api/staticmap?center=Ublock,Gurgaon,India&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
     <li><i class="fa fa-linkedin"></i> <a href="http://in.linkedin.com/in/swarnavasengupta" title="LinkedIn Profile" target="_blank">swarnavasengupta</a></li>
   </ul>
     </header>
 
   <section id="summary">
   <h1>Summary</h1>
-        <p>I’m Swarnava. I am studying Bachelor of Computer Application under West Bengal University of Technology, Keen Mozilla follower, Tech Geek, Open Source Evangelist. I make things. I am a Movie Buff, Foodie and one of the bunch full of Indians listed in the Firefox browser's <a href="http://www.mozilla.org/credits/">credits</a>....</p>
+        <p>I’m Swarnava. A Computer Engineer, Open Source Evangelist, Keen Mozilla follower, Tech Geek. I make things. I am a Movie Buff, Foodie and one of the bunch full of Indians listed in the Firefox browser's <a href="http://www.mozilla.org/credits/">credits</a>....</p>
     </section>
     
     <section id="skills">
