--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ TamApNgWx3D2/CvkXwEGAOO9XQYhxDFzAAAAAElFTkSuQmCC" />
     <li><i class="fa fa-phone"></i> +919681004074</li>
     <li><i class="fa fa-skype"></i> <a href="skype:swarnavasengupta1?chat&topic=Contacted%20from%20CV">swarnavasengupta1</a></li>
     <li><i class="fa fa-github"></i> <a href="https://www.github.com/swarnava" title="Github Profile" target="_blank">swarnava</a></li>
-    <li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Gurgaon, India<span><img src="http://maps.googleapis.com/maps/api/staticmap?center=Ublock,Gurgaon,India&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
+    <li><i class="fa fa-map-marker"></i> <a class="map-tooltip" href="#">Gurgaon, India<span><img src="https://maps.googleapis.com/maps/api/staticmap?center=Ublock,Gurgaon,India&zoom=14&size=600x300&sensor=false" style="float:right;" alt="Address Map"></span></li></a>
     <li><i class="fa fa-linkedin"></i> <a href="https://in.linkedin.com/in/swarnavasengupta" title="LinkedIn Profile" target="_blank">swarnavasengupta</a></li>
   </ul>
     </header>
