--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href='//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700italic,700' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" media="screen" href="styles.css">
-  <link rel="canonical" href="https://swarnava.in" />
+  <link rel="canonical" href="https://cv.swarnava.in" />
 
    <link rel="icon" type="image/png" href="data:image/png;base64,
 iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAGXRFWHRTb2Z0d2Fy
